@@ -12,6 +12,9 @@ What's New in Python 2.7.1?
 Core and Builtins
 -----------------
 
+- Issue #9797: pystate.c wrongly assumed that zero couldn't be a valid
+  thread-local storage key.
+
 - Issue #4947: The write() method of sys.stdout and sys.stderr uses their
   encoding and errors attributes instead of using utf-8 in strict mode, to get
   the same behaviour than the print statement.
